--- a/views/admin_company_update.html
+++ b/views/admin_company_update.html
@@ -46,9 +46,10 @@
           <div class="form-group">
             <label class="col-lg-2 control-label"><%= i('html.label.company.type') %><!--顧客タイプ --></label>
             <div class="col-lg-8">
-              <div class="btn-group" value="1" id="inputCompanyType">
-                <button type="button" class="btn btn-sm btn-default" value="0"><%= i('html.label.company.type.demo') %><!--提案客户 --></button>
+              <div class="btn-group" value="0" id="inputCompanyType">
+                <button type="button" class="btn btn-sm btn-default" value="0"><%= i('html.label.company.type.demo') %></button>
                 <button type="button" class="btn btn-sm btn-default" value="1"><%= i('html.label.company.type.contract') %></button>
+                <button type="button" class="btn btn-sm btn-default" value="2"><%= i('html.label.company.type.self') %></button>
               </div>
             </div>
           </div>
