--- a/views/admin_user_list.html
+++ b/views/admin_user_list.html
@@ -5,7 +5,7 @@
   <% include common/required.html %>
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
 
-  <script type="text/javascript" src="/javascripts/customer_user_list.js"></script>
+  <script type="text/javascript" src="/javascripts/admin_user_list.js"></script>
 
 </head>
 <body>
@@ -34,7 +34,7 @@
     <div class="page-content">
       <div class="row tableheader">
         <div class="pull-right" style="padding-bottom: 5px">
-            <a href="/customer/user/add" class="btn btn-default"><i class="icon-plus"></i><%= i('html.button.user.add') %><!-- ユーザ追加--></a>
+            <a href="/admin/user/add" class="btn btn-default"><i class="icon-plus"></i><%= i('html.button.user.add') %><!-- ユーザ追加--></a>
         </div>
         <div class="pull-right" style="width: 300px">
           <form class="search-form" onsubmit="return false;">
@@ -59,8 +59,6 @@
             <th><%= i('html.label.user.tel') %><!-- 電話番号--></th>
             <th><%= i('html.label.user.comment') %><!-- コメント--></th>
             <th><%= i('html.label.user.contents') %><!-- コンテンツ作成者--></th>
-            <th><%= i('html.label.user.approved') %><!-- 承認者--></th>
-            <th><%= i('html.label.user.notice') %><!-- 通知者--></th>
             <th><%= i('html.label.user.active') %><!-- 有効--></th>
             <th><%= i('html.label.common.operation') %><!-- 操作--></th>
           </tr>
@@ -92,35 +90,19 @@
     <$ } else {$>
     <td></td>
     <$ } $>
-    <$ if (approved == 1) {$>
-    <td><i class="icon-ok"></i></td>
-    <$ } else {$>
-    <td></td>
-    <$ } $>
-    <$ if (notice== 1) {$>
-    <td><i class="icon-ok"></i></td>
-    <$ } else {$>
-    <td></td>
-    <$ } $>
     <$ if (active == 1) {$>
     <td><i class="icon-ok"></i></td>
     <$ } else {$>
     <td></td>
     <$ } $>
-    <$ if("<%= user.companycode%>" == companycode) { $>
     <td>
-      <a href="/customer/user/edit/{{id}}" class="btn btn-default btn-sm" index={{index}} operation="edit"><%= i('html.button.common.edit') %><!-- 編集--></a>
-      <$ if (type == 0) {$>
-        <$ if (active == 1) {$>
-          <a href="/customer/user/" class="btn btn-default btn-sm" index={{index}} operation="active"><%= i('html.button.common.inactive') %><!-- 無効--></a>
-        <$ } else {$>
-          <a href="/customer/user/" class="btn btn-default btn-sm" index={{index}} operation="active"><%= i('html.button.common.active') %><!-- 有効--></a>
-        <$ } $>
+      <a href="/admin/user/edit/{{id}}" class="btn btn-default btn-sm" index={{index}} operation="edit"><%= i('html.button.common.edit') %><!-- 編集--></a>
+      <$ if (active == 1) {$>
+        <a href="/admin/user/" class="btn btn-default btn-sm" index={{index}} operation="active"><%= i('html.button.common.inactive') %><!-- 無効--></a>
+      <$ } else {$>
+        <a href="/admin/user/" class="btn btn-default btn-sm" index={{index}} operation="active"><%= i('html.button.common.active') %><!-- 有効--></a>
       <$ } $>
     </td>
-    <$ } else { $>
-    <td>&nbsp;</td>
-    <$ } $>
   </tr>
 </script>
 
