--- a/views/common/sidebar.html
+++ b/views/common/sidebar.html
@@ -214,6 +214,23 @@
       </ul>
     </li>
     <li>
+      <a href="#" class="dropdown-toggle">
+        <span class="menu-text"><%= i('html.label.sidebar.appset') %></span>
+      </a>
+      <ul class="submenu" style="display: block;">
+        <li>
+          <a href="/customer/appimage" class="dropdown-toggle">
+            <i class="icon-tablet "></i>&nbsp;<%= i('html.label.sidebar.appset.icon') %>
+          </a>
+        </li>
+        <li>
+          <a href="/customer/workstation" class="dropdown-toggle">
+            <i class="icon-th-list"></i>&nbsp;<%= i('html.label.sidebar.appset.workstation') %>
+          </a>
+        </li>
+      </ul>
+    </li>
+    <li>
       <a href="/customer/user" class="dropdown-toggle">
         <span class="menu-text"><%= i('html.label.sidebar.system') %></span>
       </a>
