--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -248,8 +248,8 @@
       width: 10px;
       height: 10px;
       background: white;
-      margin-top: 7.5px;
-      margin-left: -5px;
+      margin-top: 8px;
+      margin-left: 8px;
     }
 
     .col-lg-8 {
@@ -333,14 +333,14 @@
         </div>
       </div>
       <div class="row col-lg-8" style="border: 0px solid #dddddd;">
-        <div style="width:665px;height:478px;margin-left: 200px;margin-top: 30px;margin-bottom: 30px">
-          <div style="border:1px solid #000000;padding:50px 5px 50px 50px;border-radius: 15px;">
-            <div class="row">
-            <div class="col-lg-11 pull-left" style="overflow-y:auto;height:380px;margin-top: 15px">
+        <div style="width:660px;height:478px;margin-left: 190px;margin-top: 30px;margin-bottom: 30px">
+          <div style="border:1px solid #000000;padding:60px 5px 60px 60px;border-radius: 15px;height:100%">
+            <div>
+            <div class="pull-left" style="overflow-y:auto;height:380px;">
               <ul id="layoutLandscape" class="ace-thumbnails">
               </ul>
             </div>
-            <div class="col-lg-1 pull-right circle" style="border:1px solid #000000;margin-top: 160px">
+            <div class="pull-right circle" style="border:1px solid #000000;margin-top: 170px">
               <div class="square" style="border:1px solid #000000"></div>
             </div>
             </div>
@@ -358,7 +358,7 @@
       </div>
       <div class="row col-lg-8" style="border:solid 0px #e3e3e3;margin-bottom:30px">
         <div id="layoutPortrait" class="row col-lg-8">
-          <div style="padding: 50px 5px 50px 50px;margin-left: 230px;">
+          <div style="padding: 50px 5px 50px 50px;margin-left: 180px;">
             <div style="border:1px solid #000000;padding:70px 50px 70px 70px;border-radius: 15px;width:520px;height:670px">
               <div class="row">
                 <div class="" style="width:376px;height:520px;border:1px solid #000000;">
