添加点击事件

--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -36,7 +36,7 @@
 
 <!-- 检索结果 -->
 <script type="text/template" id="tmpl_findresult">
-  <div id="{{id}}" class="findresult">
+  <div id="{{id}}" class="{{classname}}">
     <ul class="search"></ul>
   </div>
 </script>
