--- a/public/stylesheets/yukari.css
+++ b/public/stylesheets/yukari.css
@@ -632,7 +632,7 @@ ol.popular-tags li a {
 }
 /**workstation end*/
 /* 用户搜索结果 */
-.findresult {
+.userboxresult {
   top: 0px;
   left: 0px;
   position: absolute;
@@ -640,10 +640,10 @@ ol.popular-tags li a {
   background-color: #fff;
   display: none;
 }
-.findresult a {
+.userboxresult a {
   text-decoration: none;
 }
-.findresult span {
+.userboxresult span {
   display: block;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -653,20 +653,20 @@ ol.popular-tags li a {
   font-size: 11px;
   margin-top: 1px;
 }
-.findresult span.addition {
+.userboxresult span.addition {
   color: #999;
 }
-.findresult ul {
+.userboxresult ul {
   list-style-type: none;
   margin: 0px;
 }
-.findresult img {
+.userboxresult img {
   display: block;
   width: 30px;
   position: absolute;
   margin-top: 1px;
 }
-.findresult ul.search {
+.userboxresult ul.search {
   background: #fff;
   border: solid;
   border-width: 1px 1px 1px;
@@ -678,7 +678,7 @@ ol.popular-tags li a {
   max-height: none;
   text-align: inherit;
 }
-.findresult ul.search li.user {
+.userboxresult ul.search li.user {
   border: solid #fff;
   border-width: 1px 0;
   color: #333;
@@ -690,11 +690,74 @@ ol.popular-tags li a {
   border-bottom: 1px solid #f5f5f5;
   line-height: 15px;
 }
-.findresult ul.search li.user:hover {
+.userboxresult ul.search li.user:hover {
   background-color: #b561de;
   color: #fff;
 }
-.findresult ul.search .bottom {
+.userboxresult ul.search .bottom {
+  min-height: 20px;
+  line-height: 15px;
+  padding: 2px 15px 2px 6px;
+  background-color: #f2f2f2;
+  cursor: pointer;
+}
+/* Tag搜索结果 */
+.tagboxresult {
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  z-index: 2000;
+  background-color: #fff;
+  display: none;
+}
+.tagboxresult a {
+  text-decoration: none;
+}
+.tagboxresult span {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-left: 5px;
+  color: #0088cc;
+  font-size: 11px;
+  margin-top: 1px;
+}
+.tagboxresult span.addition {
+  color: #999;
+}
+.tagboxresult ul {
+  list-style-type: none;
+  margin: 0px;
+}
+.tagboxresult ul.search {
+  background: #fff;
+  border: solid;
+  border-width: 1px 1px 1px;
+  border-color: #999 #999 #999;
+  overflow: hidden;
+  width: 200px;
+  -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.1), 0 1px 3px;
+  padding: 0;
+  max-height: none;
+  text-align: inherit;
+}
+.tagboxresult ul.search li.user {
+  border: solid #fff;
+  border-width: 1px 0;
+  color: #333;
+  cursor: pointer;
+  display: block;
+  min-height: 31px;
+  padding: 0 6px;
+  position: relative;
+  border-bottom: 1px solid #f5f5f5;
+}
+.tagboxresult ul.search li.user:hover {
+  background-color: #92d43e;
+  color: #fff;
+}
+.tagboxresult ul.search .bottom {
   min-height: 20px;
   line-height: 15px;
   padding: 2px 15px 2px 6px;
