--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -651,7 +651,7 @@ ol.popular-tags li a {
 
 
 /* 用户搜索结果 */
-.findresult {
+.userboxresult {
   top: 0px;
   left: 0px;
   position: absolute;
@@ -720,6 +720,80 @@ ol.popular-tags li a {
     }
     li.user:hover {
       background-color: #b561de;
+      color: #fff;
+    }
+
+    .bottom {
+      min-height: 20px;
+      line-height: 15px;
+      padding: 2px 15px 2px 6px;
+      background-color: #f2f2f2;
+      cursor: pointer;
+    }
+  }
+}
+
+/* Tag搜索结果 */
+.tagboxresult {
+  top: 0px;
+  left: 0px;
+  position: absolute;
+  z-index: 2000;
+
+  background-color: #fff;
+  display: none;
+
+  a {
+    text-decoration: none;
+  }
+
+  span {
+    display: block;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-left: 5px;
+
+    color: #0088cc;
+    font-size: 11px;
+    margin-top: 1px;
+  }
+  span.addition {
+    color: #999;
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0px;
+  }
+
+  ul.search {
+
+    background: #fff;
+    border: solid;
+    border-width: 1px 1px 1px;
+    border-color: #999 #999 #999;
+    overflow: hidden;
+    width: 200px;
+    -webkit-box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.1), 0 1px 3px;
+
+    padding: 0;
+    max-height: none;
+    text-align: inherit;
+
+    li.user {
+      border: solid #fff;
+      border-width: 1px 0;
+      color: #333;
+      cursor: pointer;
+      display: block;
+      min-height: 31px;
+      padding: 0 6px;
+      position: relative;
+      border-bottom: 1px solid #f5f5f5;
+    }
+    li.user:hover {
+      background-color: #92d43e;
       color: #fff;
     }
 
