--- a/views/customer_notice.html
+++ b/views/customer_notice.html
@@ -5,6 +5,7 @@
   <% include common/required.html %>
   <link href="/stylesheets/yukari.css" rel="stylesheet" media="screen">
   <script type="text/javascript" src="/javascripts/customer_notice.js"></script>
+  <script type="text/javascript" src="/javascripts/common.user.view.js"></script>
 </head>
 <body>
 
