--- a/views/customer_user_update.html
+++ b/views/customer_user_update.html
@@ -100,7 +100,7 @@
             </div>
           </div>
           <% if (user.type == 3 || user.type == 1) {%>
-          <div class="form-group">
+          <div class="form-group" id="contents">
             <label class="col-lg-2 control-label"><%= i('html.label.user.contents') %><!-- コンテンツ作成者--></label>
             <div class="col-lg-8">
               <div class="btn-group" value="0" id="inputContents">
