--- a/views/admin_user_update.html
+++ b/views/admin_user_update.html
@@ -137,18 +137,18 @@
   <div class="modal-dialog" style="width: 800px;">
     <div class="modal-content">
       <div class="modal-header">
-        <h3>顧客選択</h3>
+        <h3><%= i('html.label.user.select.comp') %><!-- 顧客選択--></h3>
       </div>
       <div class="modal-body" style="padding-bottom: 0px;">
         <table class="table table-hover" style="margin-bottom: 0px">
           <thead >
           <tr>
             <th>#</th>
-            <th>会社ID</th>
-            <th>顧客タイプ</th>
-            <th>顧客名称</th>
-            <th>登録日</th>
-            <th>選択</th>
+            <th><%= i('html.label.user.select.comppath') %><!-- 会社ID--></th>
+            <th><%= i('html.label.user.select.comptype') %><!-- 顧客タイプ--></th>
+            <th><%= i('html.label.user.select.compname') %><!-- 顧客名称--></th>
+            <th><%= i('html.label.user.select.compcreate') %><!-- 登録日--></th>
+            <th><%= i('html.label.user.select.select') %><!-- 選択--></th>
           </tr>
           </thead>
         </table>
