--- a/views/customer_workstation.html
+++ b/views/customer_workstation.html
@@ -110,9 +110,11 @@
           <div class="form-group">
             <label class="col-xs-3 control-label"><%= i('html.label.workstation.type') %><!-- タイプ--></label>
             <div class="col-xs-8">
-              <div id="inputType" class=" btn-group" value="url">
-              <button value="url" class="btn btn-sm btn-default btn-white" type="button">URL</button>
-              <button value="app" class="btn btn-sm btn-default btn-info" type="button">APP</button>
+              <div id="inputType" class="btn-group" value="ise">
+                <button value="ise" class="btn btn-sm btn-default btn-white" type="button">INSUITE</button>
+                <button value="sdb" class="btn btn-sm btn-default btn-white" type="button">SmartDB</button>
+                <button value="web" class="btn btn-sm btn-default btn-white" type="button">WEB</button>
+                <button value="app" class="btn btn-sm btn-default btn-info" type="button">APP</button>
               </div>
             </div>
           </div>
