客户一览画面,追加公司code字段

--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -56,6 +56,7 @@
             <th>#</th>
             <th><%= i('html.label.company.type') %><!--顧客タイプ --></th>
             <th><%= i('html.label.company.path') %><!--会社ID --></th>
+            <th><%= i('html.label.company.code') %><!--会社コード --></th>
             <th><%= i('html.label.company.name') %><!--会社名(英語) --></th>
             <th><%= i('html.label.company.kana') %><!--会社名(かな) --></th>
             <th><%= i('html.label.company.address') %><!--会社住所 --></th>
@@ -91,6 +92,7 @@
   <td><%= i('html.label.company.type.demo') %><!--体験顧客 --></td>
   <$ } $>
   <td>{{_id}}</td>
+  <td>{{code}}</td>
   <td>{{name}}</td>
   <td>{{kana}}</td>
   <td>{{address}}</td>
