一览画面,追加换行

--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -1014,3 +1014,7 @@ ol.popular-tags li a {
 .alertify-dialog {
   border-radius: 0px;
 }
+table {
+  word-break:break-all;
+  word-wrap:break-word;
+}
