--- a/views/customer_group_list.html
+++ b/views/customer_group_list.html
@@ -82,7 +82,7 @@
     <!--<td>{{id}}</td>-->
     <td>{{name}}</td>
     <td>{{members}}</td>
-    <td style="word-break:break-all;word-wrap:break-word">{{description}}</td>
+    <td>{{description}}</td>
     <td>{{editat}}</td>
     <td>
       <a href="/customer/group/edit/{{id}}" class="btn btn-default btn-sm" index={{index}} operation="edit"><%= i('html.button.common.edit') %><!-- 編集--></a>
