--- a/views/customer_notice.html
+++ b/views/customer_notice.html
@@ -78,8 +78,8 @@
     <tr>
         <td>{{index}}</td>
         <td>{{sendto}}</td>
-        <td style="word-break:break-all;word-wrap:break-word">{{title}}</td>
-        <td style="word-break:break-all;word-wrap:break-word">{{notice}}</td>
+        <td>{{title}}</td>
+        <td>{{notice}}</td>
         <td>{{createby}}</td>
         <td>{{createat}}</td>
     </tr>
