--- a/views/admin_user_update.html
+++ b/views/admin_user_update.html
@@ -153,7 +153,7 @@
           </thead>
         </table>
         <div style="max-height: 335px;overflow-y: auto">
-          <table class="table table-hover" style="margin-bottom: 0px;word-break:break-all;word-wrap:break-word">
+          <table class="table table-hover" style="margin-bottom: 0px;">
             <tbody id="company_list"></tbody>
           </table>
         </div>
@@ -167,7 +167,7 @@
 <script type="text/template" id="tmpl_company_list">
   <tr>
     <td>{{index}}</td>
-    <td style="word-break:break-all;word-wrap:break-word">{{companypath}}</td>
+    <td>{{companypath}}</td>
     <$ if (type == 2) {$>
     <td><%= i('html.label.company.type.self') %></td>
     <$ } else if(type == 1) {$>
@@ -175,7 +175,7 @@
     <$ } else {$>
     <td><%= i('html.label.company.type.demo') %></td>
     <$ } $>
-    <td style="word-break:break-all;word-wrap:break-word">{{name}}</td>
+    <td>{{name}}</td>
     <td>{{createat}}</td>
     <td>
       <input companypath="{{companypath}}" companycode="{{code}}" type="radio" name="company_radio">
