--- a/views/customer_user_list.html
+++ b/views/customer_user_list.html
@@ -49,7 +49,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-        <table class="table table-hover" style="word-break:break-all;word-wrap:break-word">
+        <table class="table table-hover">
           <thead>
           <tr>
             <th>#</th>
@@ -86,7 +86,7 @@
     <td>{{name}}</td>
     <td>{{title}}</td>
     <td>{{telephone}}</td>
-    <td style="word-break:break-all;word-wrap:break-word">{{description}}</td>
+    <td>{{description}}</td>
     <$ if (contents == 1) {$>
     <td><i class="icon-ok"></i></td>
     <$ } else {$>
