--- a/public/stylesheets/yukari.css
+++ b/public/stylesheets/yukari.css
@@ -1011,3 +1011,7 @@ fieldset[disabled] .btn-default.active {
 .alertify-dialog {
   border-radius: 0px;
 }
+table {
+  word-break: break-all;
+  word-wrap: break-word;
+}
