//DONE: 元素 bugfix 3. 元素做成的第一个选择类别的画面，点标题单选框不被选中

--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -162,7 +162,7 @@
                     <div style="width: 45px;float: left;"><input type="radio" name="type" value="normal" checked style="margin-top: 0px;"></div>
                     <div style="width: 200px;float: left;">
                     <h4 class="panel-title">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" num="0">
                         <%= i('html.label.synthetic.type.setimage') %><!-- 画像セット-->
                       </a>
                     </h4>
@@ -179,7 +179,7 @@
                     <div style="width: 45px;float: left;"><input type="radio" name="type" value="imageWithThumb" style="margin-top: 0px;"></div>
                     <div style="width: 200px;float: left;">
                     <h4 class="panel-title">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" num="1">
                         <%= i('html.label.synthetic.type.actionimage') %><!-- アニメーション画像-->
                       </a>
                     </h4>
@@ -196,7 +196,7 @@
                     <div style="width: 45px;float: left;"><input type="radio" name="type" value="CaseView" style="margin-top: 0px;"></div>
                     <div style="width: 200px;float: left;">
                     <h4 class="panel-title">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" num="2">
                         <%= i('html.label.synthetic.type.casemenu') %><!-- ケースビュー-->
                       </a>
                     </h4>
@@ -213,7 +213,7 @@
                     <div style="width: 45px;float: left;"><input type="radio" name="type" value="gallery" style="margin-top: 0px;"></div>
                     <div style="width: 200px;float: left;">
                     <h4 class="panel-title">
-                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
+                      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" num="3">
                         <%= i('html.label.synthetic.type.gallery') %><!-- ギャラリー-->
                       </a>
                     </h4>
