切换登陆画面

--- a/public/stylesheets/login.less
+++ b/public/stylesheets/login.less
@@ -49,7 +49,7 @@ article p label {
 	margin: 0 auto;
 	margin-top: 30px;
 	clear: both;
-	width: 540px;
+	width: 440px;
 	background: #fff;
 	-moz-border-radius: 5px;
 	-khtml-border-radius: 5px;
@@ -67,9 +67,9 @@ article p label {
 #container-demo h4.rectangle {
 	margin :0;
 	line-height: 50px;
-	background: #F7A223;//#1A84FB;
+	background: #92d43e;//#1A84FB;
 	height: 50px;
-	width: 570px;
+	width: 470px;
 	position: relative;
 	left:-65px;
 	top: 10px;
@@ -89,7 +89,7 @@ article p label {
 }
 
 #container-demo .triangle-l {
-	border-color: transparent #804000 transparent transparent;
+	border-color: transparent #388117 transparent transparent;
 	border-style:solid;
 	border-width:15px;
 	height:0px;
@@ -101,13 +101,13 @@ article p label {
 }
 
 #container-demo .triangle-r {
-	border-color: transparent transparent transparent #804000;
+	border-color: transparent transparent transparent #388117;
 	border-style:solid;
 	border-width:15px;
 	height:0px;
 	width:0px;
 	position: relative;
-	left:490px;
+	left:390px;
 	top: 16px;
 	z-index: -1;
 }
