--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -40,7 +40,7 @@ article p label {
   margin: 0 auto;
   margin-top: 30px;
   clear: both;
-  width: 540px;
+  width: 440px;
   background: #fff;
   -moz-border-radius: 5px;
   -khtml-border-radius: 5px;
@@ -57,9 +57,9 @@ article p label {
 #container-demo h4.rectangle {
   margin: 0;
   line-height: 50px;
-  background: #F7A223;
+  background: #92d43e;
   height: 50px;
-  width: 570px;
+  width: 470px;
   position: relative;
   left: -65px;
   top: 10px;
@@ -77,7 +77,7 @@ article p label {
   background: rgba(255, 105, 180, 0.75);
 }
 #container-demo .triangle-l {
-  border-color: transparent #804000 transparent transparent;
+  border-color: transparent #388117 transparent transparent;
   border-style: solid;
   border-width: 15px;
   height: 0px;
@@ -88,13 +88,13 @@ article p label {
   z-index: -1;
 }
 #container-demo .triangle-r {
-  border-color: transparent transparent transparent #804000;
+  border-color: transparent transparent transparent #388117;
   border-style: solid;
   border-width: 15px;
   height: 0px;
   width: 0px;
   position: relative;
-  left: 490px;
+  left: 390px;
   top: 16px;
   z-index: -1;
 }
