--- a/views/login.html
+++ b/views/login.html
@@ -1,65 +1,68 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= title %></title>
-  <% include common/required.html %>
+  <head>
 
-  <link rel='stylesheet' href='/stylesheets/top.css'/>
-  <script type='text/javascript' src='/javascripts/login/browser.js'></script>
-  <script type='text/javascript' src='/javascripts/login/login.js'></script>
+    <title><%= title %></title>
+    <% include common/required.html %>
 
-</head>
-<body>
-<div class="container">
-  <div class="row" style="margin-top: 50px">
+    <link rel='stylesheet' href='/stylesheets/login.css'/>
+    <script type='text/javascript' src='/javascripts/login/browser.js'></script>
+    <script type='text/javascript' src='/javascripts/login/login.js'></script>
 
-    <section id="container-demo" class="col-lg-4 col-md-offset-4">
-
-      <form id="loginform" method="post" action="/login" class="form-horizontal" >
-        <input type="hidden" id="_csrf" name="_csrf" value="<%= csrftoken %>" />
-        <input type="hidden" name="_method" value="post" />
-        <!-- 公司ID -->
-        <div class="form-group">
-          <div class="input-group">
-              <span class="input-group-addon muted">
-                <i class="icon-user"></i>
-              </span>
-            <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="dreamarts">
-          </div>
-        </div>
-        <!-- 用户名 -->
-        <div class="form-group">
-          <div class="input-group">
-            <span class="input-group-addon"><i class="icon-envelope"></i></span>
-            <input type="text" class="form-control" placeholder="e-mail" id="name" name="name" value="test01@dreamarts.co.jp">
-          </div>
-        </div>
-        <!-- 密码 -->
-        <div class="form-group">
-          <div class="input-group">
-            <span class="input-group-addon "><i class="icon-key"></i></span>
-            <input type="password" class="form-control" placeholder="password" id="pass" name="pass" value="test01">
-          </div>
-        </div>
-        <div class="form-group">
-            <div class="checkbox" style="margin-bottom: 10px">
-              <label>
-                <input type="checkbox"> サインインしたままにする
-              </label>
-            </div>
-            <button class="btn btn-default btn-block btn-large" onclick="javascript:login(); return false;">サインイン</button>
-          </div>
-      </form>
+  </head>
+  <body>
+    
+    <section>
+      <article id="area" style="position: absolute;">
+        <header>
+          <hgroup>
+            <h1></h1>
+            <h2></h2>
+          </hgroup>
+        </header>
+      </article>
     </section>
 
-  </div><!-- /.body-content -->
+    <div id="container-demo">
+      <div class="bubble">
+        <h4 class="rectangle">YUKARi</h4>
+        <div class="triangle-l"></div>
+        <div class="triangle-r"></div>
 
-  <!-- Site footer -->
-  <div class="container footer">
-    <p>&copy; Copyright ゆかり 2013 DreamArts Corporation. All Rights Reserved.</p>
-  </div>
+        <form id="loginform" method="post" action="/login">
+          <input type="hidden" id="_csrf" name="_csrf" value="<%= csrftoken %>" />
+          <input type="hidden" name="_method" value="post" />
 
-</div> <!-- /container -->
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon"><i class="icon-user"></i></span>
+              <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="apple">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon"><i class="icon-envelope"></i></span>
+              <input type="text" class="form-control" placeholder="E-mail" id="name" name="name" value="apple01@apple.com.cn">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon "><i class="icon-key"></i></span>
+              <input type="password" class="form-control" placeholder="Password" id="pass" name="pass" value="apple01" >
+            </div>
+          </div>
+          <div class="form-group">
+            <div>
+              <button class="btn btn-block" onclick="javascript:login(); return false;">サインイン</button>
+            </div>
+          </div>
+        </form>
 
-</body>
+      </div>    
+    </div>
+    
+    <footer>
+      <p>Copyright © 2013, DA Corporation. All Rights Reserved.</p>
+    </footer>
+  </body>
 </html>
