修改公司ID图标

--- a/views/login.html
+++ b/views/login.html
@@ -35,7 +35,7 @@
 
           <div class="form-group">
             <div class="input-group">
-              <span class="input-group-addon"><i class="icon-user"></i></span>
+              <span class="input-group-addon"><i class="icon-building"></i></span>
               <input type="text" class="form-control" placeholder="Company Id" id="path" name="path" value="apple">
             </div>
           </div>
