//DONE: 元素 bugfix 1. 背景的动作内容是英语的

--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -232,14 +232,14 @@
 
                 <div class="col-lg-7">
                   <select class="form-control" id="txt_metadata_effect">
-                    <option value="none"><%= i('html.select.synthetic.metadata.action') %><!-- なし--></option>
-                    <option value="zoomAndMoveRightDown">zoomAndMoveRightDown</option>
-                    <option value="zoom">zoom</option>
-                    <option value="zoomOut">zoomOut</option>
-                    <option value="moveRightUp">moveRightUp</option>
-                    <option value="up">up</option>
-                    <option value="moveLeftDown">moveLeftDown</option>
-                    <option value="zoomAndMoveRightUp">zoomAndMoveRightUp</option>
+                    <option value="none"><%= i('html.select.synthetic.effect.none') %><!-- なし--></option>
+                    <option value="zoomAndMoveRightDown"><%= i('html.select.synthetic.effect.zoomAndMoveRightDown') %></option>
+                    <option value="zoom"><%= i('html.select.synthetic.effect.zoom') %></option>
+                    <option value="zoomOut"><%= i('html.select.synthetic.effect.zoomOut') %></option>
+                    <option value="moveRightUp"><%= i('html.select.synthetic.effect.moveRightUp') %></option>
+                    <option value="up"><%= i('html.select.synthetic.effect.up') %></option>
+                    <option value="moveLeftDown"><%= i('html.select.synthetic.effect.moveLeftDown') %></option>
+                    <option value="zoomAndMoveRightUp"><%= i('html.select.synthetic.effect.zoomAndMoveRightUp') %></option>
                   </select>
                 </div>
               </div>
