解决生成空白tag问题

--- a/views/content_material.html
+++ b/views/content_material.html
@@ -43,7 +43,7 @@
               <button type="button" class="btn btn-default" id="showgrid"><i class="icon-table"></i></button>
             </div>
 
-            <input type="file" id="uploadfile" style="display: none" multiple="multiple" />
+            <input type="file" id="uploadfile" style="display: none" multiple="multiple" accept=".mp4, .png, .jpg, .jpeg, .jpe, .gif, .bmp" />
           </div>
 
           <div class="pull-right" style="width: 300px">
