--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -152,7 +152,7 @@
       position: relative;
       overflow: hidden;
       /*margin: 2px;*/
-      border: 1px solid #000000
+      border: 1px solid #e3e3e3
     }
 
     .ace-thumbnails>li>:first-child {
@@ -255,6 +255,22 @@
     .col-lg-8 {
       width: 1048px;
     }
+    .x {
+      background : url('/images/x.png') no-repeat ;
+      width:665px;
+      height:520px;
+      margin-left: 200px;
+      margin-top: 30px;
+      margin-bottom: 30px
+    }
+    .y{
+      background : url('/images/y.png') no-repeat;
+      width:570px;
+      height:675px;
+      margin-left: 250px;
+      margin-top: 30px;
+      margin-bottom: 30px
+    }
 
 
   </style>
@@ -333,19 +349,11 @@
         </div>
       </div>
       <div class="row col-lg-8" style="border: 0px solid #dddddd;">
-        <div style="width:665px;height:478px;margin-left: 200px;margin-top: 30px;margin-bottom: 30px">
-          <div style="border:1px solid #000000;padding:50px 5px 50px 50px;border-radius: 15px;">
-            <div class="row">
-            <div class="col-lg-11 pull-left" style="overflow-y:auto;height:380px;margin-top: 15px">
-              <ul id="layoutLandscape" class="ace-thumbnails">
-              </ul>
-            </div>
-            <div class="col-lg-1 pull-right circle" style="border:1px solid #000000;margin-top: 160px">
-              <div class="square" style="border:1px solid #000000"></div>
-            </div>
-            </div>
-          </div>
-        </div>
+        <div class="x" >
+           <div class="col-lg-11 pull-left" style="overflow-y:auto;width:560px;height:425px;margin-top: 50px;margin-left: 58px;padding: 0px">
+            <ul id="layoutLandscape" class="ace-thumbnails"></ul>
+           </div>
+         </div>
       </div>
       <div class="row col-lg-8 tableheader" style="margin-top: 30px">
         <div class="pull-left">
@@ -357,42 +365,33 @@
         </div>
       </div>
       <div class="row col-lg-8" style="border:solid 0px #e3e3e3;margin-bottom:30px">
-        <div id="layoutPortrait" class="row col-lg-8">
-          <div style="padding: 50px 5px 50px 50px;margin-left: 230px;">
-            <div style="border:1px solid #000000;padding:70px 50px 70px 70px;border-radius: 15px;width:520px;height:670px">
-              <div class="row">
-                <div class="" style="width:376px;height:520px;border:1px solid #000000;">
-                  <div>
-                    <div class="caseview_panel" style=" border-bottom: solid 1px #e3e3e3;">
-                      <div class="carousel slide">
-                        <div class="carousel-inner ">
-                          <div class="item active">
-                            <div id="caseMenuScrollDiv" offset="0" style="height: 104px; white-space: nowrap;">
-                              <ul id="caseMenuPanel" class="ace-thumbnails"></ul>
-                            </div>
-                          </div>
-                        </div>
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"
-                           style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
-                          <span class="icon-prev"></span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"
-                           style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
-                          <span class="icon-next"></span>
-                        </a>
+        <div id="layoutPortrait" class="y">
+          <div class="row">
+            <div class="" style="width:460px;height:560px;border:1px solid #e3e3e3;margin-left: 55px;margin-top: 58px;">
+              <div class="caseview_panel" style=" border-bottom: solid 1px #e3e3e3;">
+                <div class="carousel slide">
+                  <div class="carousel-inner ">
+                    <div class="item active">
+                      <div id="caseMenuScrollDiv" offset="0" style="height: 104px; white-space: nowrap;">
+                        <ul id="caseMenuPanel" class="ace-thumbnails"></ul>
                       </div>
-                      <div class="thumb" id="addCase">
-                        <img style="width: 94px;height: 94px;" data-toggle="modal" href="#pickImg"
-                             src="/images/block.png"></div>
                     </div>
                   </div>
-                  <div class="row" style="overflow-y:auto;height:420px;">
-                    <img style="width:357px;" id="caseView" src="">
-                  </div>
+                  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"
+                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
+                    <span class="icon-prev"></span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"
+                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
+                    <span class="icon-next"></span>
+                  </a>
                 </div>
-                <div class="circle" style="border:1px solid #000000;margin-top: 40px;margin-left: 180px">
-                  <div class="square" style="border:1px solid #000000;margin-left: 8.5px;"></div>
+                <div class="thumb" id="addCase">
+                  <img style="width: 94px;height: 94px;" data-toggle="modal" href="#pickImg" src="/images/block.png">
                 </div>
+              </div>
+              <div class="row" style="overflow-y:auto;height:460px;">
+                <img style="width:440px;" id="caseView" src="">
               </div>
             </div>
           </div>
