--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -252,22 +252,22 @@
       margin-left: -5px;
     }
 
-    .col-lg-8 {
-      width: 1048px;
-    }
+    /*.col-lg-8 {*/
+      /*width: 1048px;*/
+    /*}*/
     .x {
       background : url('/images/x.png') no-repeat ;
       width:665px;
       height:520px;
-      margin-left: 200px;
+      margin-left: 30px;
       margin-top: 30px;
-      margin-bottom: 30px
+      /*margin-bottom: 30px*/
     }
     .y{
       background : url('/images/y.png') no-repeat;
       width:570px;
       height:675px;
-      margin-left: 250px;
+      margin-left: 80px;
       margin-top: 30px;
       margin-bottom: 30px
     }
@@ -315,31 +315,29 @@
         </div>
       </div>
       -->
-      <div class="row tableheader col-lg-8">
+      <div class="row tableheader col-lg-8 col-md-12">
         <div class="pull-left">
           <h4><%= i('html.label.layout.info') %><!-- 情報入力--></h4>
         </div>
       </div>
-      <div class="row col-lg-8" style="border:solid 0px #e3e3e3;margin-bottom: 30px">
+      <div class="row col-lg-8 col-md-12" style="border:solid 0px #e3e3e3;margin-bottom: 30px">
         <form class="form-horizontal" role="form">
           <div class="form-group" style="margin-top: 15px">
-            <label for="layoutName" class="control-label col-lg-2"><%= i('html.label.layout.info.title') %><!-- タイトル--></label>
-
-            <div style="margin-left:200px;width:700px">
+            <label for="layoutName" class="control-label col-lg-2 col-md-2"><%= i('html.label.layout.info.title') %><!-- タイトル--></label>
+            <div class="col-lg-8 col-md-8">
               <input type="text" name="layoutName" class="form-control" id="layoutName" placeholder="<%= i('html.label.layout.info.title') %>">
             </div>
           </div>
           <div class="form-group">
-            <label for="layoutComment" class="col-lg-2 control-label"><%= i('html.label.layout.info.comment') %><!-- コメント--></label>
-
-            <div style="margin-left:200px;width:700px">
+            <label for="layoutComment" class="control-label col-lg-2 col-md-2"><%= i('html.label.layout.info.comment') %><!-- コメント--></label>
+            <div class="col-lg-8 col-md-8">
               <textarea class="form-control" name="layoutComment" id="layoutComment" placeholder="<%= i('html.label.layout.info.comment') %>"
-                        rows="6"></textarea>
+                        rows="4"></textarea>
             </div>
           </div>
         </form>
       </div>
-      <div class="row col-lg-8 tableheader" style="margin-top: 30px">
+      <div class="row col-lg-8 col-md-12 tableheader" style="margin-top: 30px">
         <div class="pull-left">
           <h4><%= i('html.label.layout.x') %><!-- 横--></h4>
         </div>
@@ -348,14 +346,14 @@
           <a data-toggle="modal"  href="#" class="btn btn-default" id="addLayoutScreen"><i class="icon-plus">&nbsp;</i><%= i('html.button.layout.screenadd') %><!-- 追加スクリーン--></a>
         </div>
       </div>
-      <div class="row col-lg-8" style="border: 0px solid #dddddd;">
+      <div class="row col-lg-8 col-md-12" style="border: 0px solid #dddddd;">
         <div class="x" >
-           <div class="col-lg-11 pull-left" style="overflow-y:auto;width:560px;height:425px;margin-top: 50px;margin-left: 58px;padding: 0px">
+           <div class="col-lg-11 col-md-12 pull-left" style="overflow-y:auto;width:560px;height:425px;margin-top: 50px;margin-left: 58px;padding: 0px">
             <ul id="layoutLandscape" class="ace-thumbnails"></ul>
            </div>
          </div>
       </div>
-      <div class="row col-lg-8 tableheader" style="margin-top: 30px">
+      <div class="row col-lg-8 col-md-12 tableheader" style="margin-top: 30px">
         <div class="pull-left">
           <h4><%= i('html.label.layout.y') %><!-- 縦--></h4>
         </div>
@@ -364,7 +362,7 @@
           <a data-toggle="modal"  href="#" class="btn btn-default" id="addCaseMenu"><i class="icon-plus">&nbsp;</i><%= i('html.button.layout.casemenu') %><!-- 追加ケースメーニュー--></a>
         </div>
       </div>
-      <div class="row col-lg-8" style="border:solid 0px #e3e3e3;margin-bottom:30px">
+      <div class="row col-lg-8 col-md-12" style="border:solid 0px #e3e3e3;margin-bottom:30px">
         <div id="layoutPortrait" class="y">
           <div class="row">
             <div class="" style="width:460px;height:560px;border:1px solid #e3e3e3;margin-left: 55px;margin-top: 58px;">
@@ -397,8 +395,8 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8" style="margin-bottom: 30px;padding: 0px;">
-        <div id="saveLayout" name="saveLayout" class="col-lg-4 btn btn-warning btn-lg">
+      <div class="col-lg-8 col-md-12" style="margin-bottom: 30px;padding: 0px;">
+        <div id="saveLayout" name="saveLayout" class="col-lg-4 col-md-4 btn btn-warning btn-lg">
           <%= i('html.button.common.save') %><!-- 保存-->
         </div>
       </div>
