--- a/public/stylesheets/contents.css
+++ b/public/stylesheets/contents.css
@@ -183,6 +183,7 @@
 }
 #preview img {
   width: 100%;
+  max-height: 220px;
   float: left;
 }
 #preview span {
@@ -192,6 +193,8 @@
   right: 10px;
   display: none;
   cursor: pointer;
+  font-size: 30px;
+  color: red;
 }
 .panelheader {
   margin-left: 30px;
@@ -228,7 +231,7 @@
   width: 150px;
   height: 150px;
   border: 1px solid #e4e4e4;
-  overflow: scroll;
+  overflow: hidden;
 }
 .action_widget_image_preview img {
   width: 100%;
@@ -251,6 +254,7 @@
 }
 .action_widget_moive_preview video {
   width: 100%;
+  height: 100%;
 }
 .tools {
   position: absolute;
