--- a/public/stylesheets/contents.less
+++ b/public/stylesheets/contents.less
@@ -220,6 +220,7 @@
 
 #preview img {
   width: 100%;
+  max-height: 220px;
   float: left;
 }
 #preview span {
@@ -229,6 +230,8 @@
   right: 10px;
   display: none;
   cursor:  pointer;
+  font-size: 30px;
+  color : red;
 }
 
 
@@ -271,9 +274,8 @@
 .action_widget_image_preview {
   width: 150px;
   height: 150px;
-
   border: 1px solid #e4e4e4;
-  overflow: scroll;
+  overflow: hidden;
 }
 .action_widget_image_preview img{
   width: 100%;
@@ -304,6 +306,7 @@
 
 .action_widget_moive_preview video{
   width: 100%;
+  height: 100%;
 }
 
 .tools {
