--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -129,12 +129,8 @@
 
                 <div class="col-lg-7">
                   <div class="row">
-                    <div class="col-lg-6">
-                      <input id="txt_width" type="text" name="widget_width" class="form-control" placeholder="width" readonly style="width: 60px;">
-                    </div>
-                    <div class="col-lg-6">
-                      <input id="txt_height" type="text" name="widget_height" class="form-control" placeholder="height" readonly style="width: 60px;">
-                    </div>
+                      <input id="txt_width" type="text" name="widget_width" class="form-control" placeholder="width" readonly style="width: 60px; float: left;">
+                      <input id="txt_height" type="text" name="widget_height" class="form-control" placeholder="height" readonly style="width: 60px;float: left;margin-left: 10px;">
                   </div>
                 </div>
               </div>
@@ -143,12 +139,8 @@
 
                 <div class="col-lg-7">
                   <div class="row">
-                    <div class="col-lg-6">
-                      <input id="txt_x" type="text" name="widget_left" class="form-control" placeholder="top" readonly style="width: 60px;">
-                    </div>
-                    <div class="col-lg-6">  
-                      <input id="txt_y" type="text" name="widget_top" class="form-control" placeholder="left" readonly style="width: 60px;">
-                    </div>
+                      <input id="txt_x" type="text" name="widget_left" class="form-control" placeholder="top" readonly style="width: 60px; float: left;">
+                      <input id="txt_y" type="text" name="widget_top" class="form-control" placeholder="left" readonly style="width: 60px; float: left; margin-left: 10px;">
                   </div>
                 </div>
               </div>
@@ -247,12 +239,12 @@
                 <label for="btn_select_effect_image" class="col-lg-5 control-label"><%= i('html.label.synthetic.metadata.fontimage') %><!-- 文字画像設定--></label>
 
                 <div class="col-lg-7">
-                  <a class="btn btn-default" id="btn_select_effect_image"><%= i('html.button.synthetic.metadata.select') %><!-- 画像選択--></a>
+                  <a class="btn btn-default" id="btn_select_effect_image" style="float: left"><%= i('html.button.synthetic.metadata.select') %><!-- 画像選択--></a>
                 </div>
               </div>
             </form>
             <div id="preview"><img src="/images/block.png">
-            <span>x</span></div>
+            </div>
           </div>
         </div>
       </div>
