--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -370,17 +370,17 @@
                 <div class="carousel slide">
                   <div class="carousel-inner ">
                     <div class="item active">
-                      <div id="caseMenuScrollDiv" offset="0" style="height: 104px; white-space: nowrap;">
+                      <div id="caseMenuScrollDiv" offset="0" style="height: 104px; white-space: nowrap; overflow-x: auto; overflow-y: hidden;">
                         <ul id="caseMenuPanel" class="ace-thumbnails"></ul>
                       </div>
                     </div>
                   </div>
                   <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"
-                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
+                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit; display:none;">
                     <span class="icon-prev"></span>
                   </a>
                   <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"
-                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
+                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit; display:none;">
                     <span class="icon-next"></span>
                   </a>
                 </div>
