添加临时图片

--- a/views/customer_appimage.html
+++ b/views/customer_appimage.html
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div id="img1024x768" class="col-lg-6">
-          <img class="img-rounded splash-size" src="/images/tmp/img_start01.png">
+          <img class="img-rounded splash-size" src="/images/test/img_start01.png">
           <input type="file" id="uploadfile" style="display: none" accept=".png, .jpg, .jpeg" />
         </div>
       </div>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="img-rounded splash-size" src="/images/tmp/img_start02.png">
+          <img class="img-rounded splash-size" src="/images/test/img_start02.png">
         </div>
       </div>
       <div class="row" style="margin-left: 30px;margin-bottom: 30px">
@@ -81,7 +81,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img class="img-rounded header-size" src="/images/tmp/logo_header.png" style="background-color: gainsboro">
+          <img class="img-rounded header-size" src="/images/test/logo_header.png" style="background-color: gainsboro">
         </div>
       </div>
       <div class="col-lg-8" style="margin-bottom: 30px">
